--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "devDependencies": {
     "dataurl": "^0.1.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.16.0",
+    "inline-js-core": "^0.5.0",
     "mocha": "^5.2.0",
     "mocha-context": "^0.1.5",
-    "nyc": "^11.8.0"
+    "nyc": "^14.1.1"
   },
   "repository": "eight04/inline-js-default-transforms"
 }
