--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Builtin transformers for inline-js",
   "author": "eight04 <eight04@gmail.com>",
   "license": "MIT",
+  "eslintIgnore": ["coverage"],
   "scripts": {
-    "lint": "eslint **/*.js --ignore-pattern coverage --cache",
-    "nyc": "nyc --reporter=html mocha",
-    "test": "npm run lint && npm run nyc",
+    "lint": "eslint **/*.js --cache",
+    "test": "npm run lint && c8 --reporter lcov mocha",
     "preversion": "npm test",
     "postversion": "git push --follow-tags && npm publish"
   },
@@ -21,12 +21,12 @@
     "inline-js-core": "*"
   },
   "devDependencies": {
+    "c8": "^5.0.1",
     "dataurl": "^0.1.0",
     "eslint": "^5.16.0",
     "inline-js-core": "^0.5.0",
     "mocha": "^6.1.4",
-    "mocha-context": "^0.1.5",
-    "nyc": "^14.1.1"
+    "mocha-context": "^0.1.5"
   },
   "repository": "eight04/inline-js-default-transforms"
 }
