--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
   "description": "Builtin transformers for inline-js",
   "author": "eight04 <eight04@gmail.com>",
   "license": "MIT",
+  "eslintIgnore": ["coverage"],
   "scripts": {
-    "lint": "eslint **/*.js --ignore-pattern coverage --cache",
-    "nyc": "nyc --reporter=html mocha",
-    "test": "npm run lint && npm run nyc",
+    "lint": "eslint **/*.js --cache",
+    "test": "npm run lint && c8 --reporter lcov mocha",
     "preversion": "npm test",
     "postversion": "git push --follow-tags && npm publish"
   },
   "files": [],
   "main": "index.js",
   "dependencies": {
-    "clean-css": "^4.1.11",
-    "mime": "^2.3.1"
+    "clean-css": "^4.2.1",
+    "mime": "^2.4.3"
   },
   "peerDependencies": {
     "inline-js-core": "*"
   },
   "devDependencies": {
+    "c8": "^5.0.1",
     "dataurl": "^0.1.0",
-    "eslint": "^4.19.1",
-    "mocha": "^5.2.0",
-    "mocha-context": "^0.1.5",
-    "nyc": "^11.8.0"
+    "eslint": "^5.16.0",
+    "inline-js-core": "^0.5.0",
+    "mocha": "^6.1.4",
+    "mocha-context": "^0.1.5"
   },
   "repository": "eight04/inline-js-default-transforms"
 }
